# serializer version: 1
# name: TestFeatureDepOptional.test_feature_spec_version_changes_when_optional_changes
  dict({
    'optional': 'd6b76142',
    'required': 'c1734810',
  })
# ---
# name: TestFeatureDepOptional.test_optional_false_serializes_correctly
  dict({
    'columns': None,
    'feature': 'test/feature',
    'fields_mapping': dict({
      'mapping': dict({
        'exclude_fields': list([
        ]),
        'match_suffix': False,
        'type': 'default',
      }),
    }),
    'lineage': dict({
      'relationship': dict({
        'type': '1:1',
      }),
    }),
    'optional': False,
    'rename': None,
    'sql_filters': None,
  })
# ---
# name: TestFeatureDepOptional.test_optional_true_serializes_correctly
  dict({
    'columns': None,
    'feature': 'test/feature',
    'fields_mapping': dict({
      'mapping': dict({
        'exclude_fields': list([
        ]),
        'match_suffix': False,
        'type': 'default',
      }),
    }),
    'lineage': dict({
      'relationship': dict({
        'type': '1:1',
      }),
    }),
    'optional': True,
    'rename': None,
    'sql_filters': None,
  })
# ---
